deleted image margins and fixed search bar overlap

--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ section {
   padding: 20px;
 }
 
-div .group {
+div.group {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,7 +45,6 @@ main img {
 
 section img {
   width: 100%;
-  margin-bottom: 15px;
 }
 
 /* ---  Groups & Items --- */
@@ -62,7 +61,6 @@ form.group {
 
 .image-wrapper {
   flex: 1;
-  margin: 0 6px;
 }
 
 .image-wrapper img {
@@ -144,7 +142,7 @@ form button {
   background-color: #ff385c;
   border: none;
   color: #fff;
-  font-size: 24px;
+  font-size: 18px;
   padding: 15px;
   width: 100%;
 }
@@ -191,7 +189,7 @@ footer p {
 
   form.group {
     flex-direction: row;
-    gap: 30px;
+    gap: 15px;
   }
 
   form label {
@@ -210,6 +208,7 @@ footer p {
     width: 20%;
     font-size: small;
     flex-direction: column;
+    justify-content: center;
   }
 
   .input:last-child {
